<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/textView_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:contentDescription="@string/imageView_description"
        app:srcCompat="@drawable/primer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextA_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextB_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:ems="10"
        android:hint="@string/editTextX_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextC_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextD_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Answer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textView_Answer_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewY"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/textViewY_hint"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClearClick"
            android:text="@string/button_clear_text"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_solve"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonSolveClick"
            android:text="@string/button_solve_text"
            android:textColor="@color/teal_200"
            android:textSize="24sp" />


    </LinearLayout>

</LinearLayout>